[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/graphics/misc/color_defaults.png" type="Texture" id=1]
[ext_resource path="res://assets/graphics/misc/color_switch.png" type="Texture" id=2]
[ext_resource path="res://src/UI/ColorPickers.gd" type="Script" id=3]
[ext_resource path="res://assets/graphics/misc/vertical_mirror_off.png" type="Texture" id=4]
[ext_resource path="res://assets/graphics/misc/horizontal_mirror_off.png" type="Texture" id=5]

[sub_resource type="ShortCut" id=19]

[node name="ColorPickers" type="PanelContainer"]
margin_left = 958.0
margin_top = 170.0
margin_right = 1276.0
margin_bottom = 229.062
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 311.0
margin_bottom = 75.0

[node name="ColorPickersHorizontal" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 304.0
margin_bottom = 32.0
custom_constants/separation = 13
alignment = 1

[node name="LeftColorPickerButton" type="ColorPickerButton" parent="VBoxContainer/ColorPickersHorizontal"]
margin_left = 62.0
margin_right = 126.0
margin_bottom = 32.0
rect_min_size = Vector2( 64, 32 )
hint_tooltip = "Choose a color for the left tool"
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="ColorButtonsVertical" type="VBoxContainer" parent="VBoxContainer/ColorPickersHorizontal"]
margin_left = 139.0
margin_right = 164.0
margin_bottom = 32.0
alignment = 1

[node name="ColorSwitch" type="TextureButton" parent="VBoxContainer/ColorPickersHorizontal/ColorButtonsVertical" groups=["UIButtons"]]
margin_top = 6.0
margin_right = 25.0
margin_bottom = 13.0
hint_tooltip = "Switch left and right colors
(%s)"
mouse_default_cursor_shape = 2
shortcut_in_tooltip = false
shortcut = SubResource( 19 )
texture_normal = ExtResource( 2 )

[node name="ColorDefaults" type="TextureButton" parent="VBoxContainer/ColorPickersHorizontal/ColorButtonsVertical"]
margin_top = 17.0
margin_right = 25.0
margin_bottom = 25.0
hint_tooltip = "Reset the colors to their default state (black for left, white for right)"
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 1 )

[node name="RightColorPickerButton" type="ColorPickerButton" parent="VBoxContainer/ColorPickersHorizontal"]
margin_left = 177.0
margin_right = 241.0
margin_bottom = 32.0
rect_min_size = Vector2( 64, 32 )
hint_tooltip = "Choose a color for the right tool"
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
size_flags_vertical = 4
color = Color( 1, 1, 1, 1 )

[node name="Mirror" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 36.0
margin_right = 304.0
margin_bottom = 68.0
custom_constants/separation = 44
alignment = 1

[node name="Horizontal" type="Button" parent="VBoxContainer/Mirror" groups=["UIButtons"]]
margin_left = 98.0
margin_right = 130.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
hint_tooltip = "Enable horizontal mirrored drawing"
mouse_default_cursor_shape = 2
toggle_mode = true

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Mirror/Horizontal"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -11.0
margin_top = -11.0
margin_right = 11.0
margin_bottom = 11.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vertical" type="Button" parent="VBoxContainer/Mirror" groups=["UIButtons"]]
margin_left = 174.0
margin_right = 206.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
hint_tooltip = "Enable vertical mirrored drawing"
mouse_default_cursor_shape = 2
toggle_mode = true

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Mirror/Vertical"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -11.0
margin_top = -11.0
margin_right = 11.0
margin_bottom = 11.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="color_changed" from="VBoxContainer/ColorPickersHorizontal/LeftColorPickerButton" to="." method="_on_ColorPickerButton_color_changed" binds= [ false ]]
[connection signal="popup_closed" from="VBoxContainer/ColorPickersHorizontal/LeftColorPickerButton" to="." method="_on_ColorPickerButton_popup_closed"]
[connection signal="pressed" from="VBoxContainer/ColorPickersHorizontal/LeftColorPickerButton" to="." method="_on_ColorPickerButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ColorPickersHorizontal/ColorButtonsVertical/ColorSwitch" to="." method="_on_ColorSwitch_pressed"]
[connection signal="pressed" from="VBoxContainer/ColorPickersHorizontal/ColorButtonsVertical/ColorDefaults" to="." method="_on_ColorDefaults_pressed"]
[connection signal="color_changed" from="VBoxContainer/ColorPickersHorizontal/RightColorPickerButton" to="." method="_on_ColorPickerButton_color_changed" binds= [ true ]]
[connection signal="popup_closed" from="VBoxContainer/ColorPickersHorizontal/RightColorPickerButton" to="." method="_on_ColorPickerButton_popup_closed"]
[connection signal="pressed" from="VBoxContainer/ColorPickersHorizontal/RightColorPickerButton" to="." method="_on_ColorPickerButton_pressed"]
[connection signal="toggled" from="VBoxContainer/Mirror/Horizontal" to="." method="_on_Horizontal_toggled"]
[connection signal="toggled" from="VBoxContainer/Mirror/Vertical" to="." method="_on_Vertical_toggled"]
